--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer.</h3>
-	  <h3>I love all things computer science and maths.</h3>
+	  <h3>Hi, I'm <strong>{{ site.author }}</strong></h3>
+	  <h4>I'm currently studying Computer Science at Federal University of Minas Gerais.</h4>
+	  <h4>I'm also working as an undergraduate research assistant in the <a href="http://lac.dcc.ufmg.br/"> Compilers Laboratory </a>.
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
 	  <h3>For more check out my academic &amp; professional <a href="http://jekyller.github.io/vitae">Resume</a>.</h3>
-	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <h3><a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
 </section>
