--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: home
 	  </div>
 	  <h3>Hi, I'm <strong>{{ site.author }}</strong></h3>
 	  <h4>I'm currently studying Computer Science at Federal University of Minas Gerais.</h4>
-	  <h4>I'm also working as an undergraduate research assistant in the <a href="http://lac.dcc.ufmg.br/"> Compilers Laboratory </a>.
-	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="http://jekyller.github.io/vitae">Resume</a>.</h3>
+	  <h4>I'm also working as an undergraduate research assistant in the <a href="http://lac.dcc.ufmg.br/"> Compilers Laboratory </a>.</h4>
+	  <h4>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h4>
+	  <h4>For more check out my academic &amp; professional <a href="http://jekyller.github.io/vitae">Resume</a>.</h4>
 	  <h3><a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
