--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
 	  <h4>I'm currently studying Computer Science at Federal University of Minas Gerais.</h4>
 	  <h4>I'm also working as an undergraduate research assistant in the <a href="http://lac.dcc.ufmg.br/"> Compilers Laboratory </a>.</h4>
 	  <h4>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h4>
-    <h4>Check my Resume <a href="">here</a>.</h4>
+    <h4>Check my Resume <a href="https://github.com/Robertorosmaninho/homepage/raw/master/Resume.pdf">here</a>.</h4>
 	  {% include social.html %}
 	</div>
 </section>
